--- a/index.html
+++ b/index.html
@@ -118,5 +118,16 @@
         </div>
     </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        (function(){
+          emailjs.init("YOUR_PUBLIC_KEY_HERE"); // replace with your actual EmailJS public key
+        })();
+      </script>
+      
+
+
+
   </body>
 </html>
