--- a/index.html
+++ b/index.html
@@ -15,16 +15,8 @@
     <!-- ============================= -->
     <!--    Contact-Us-email (1 of 2)  -->
     <!-- ============================= -->
-    
-
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script>
-        (function(){
-          emailjs.init("VOkQZ-STSbUeEDE3V"); // YOUR actual public key here
-        })();
-    </script>
-    
-
+    <script src="app.js"></script>
 </head>
 
 
